# otuscpp-hw-12

./: .travis.yml  CMakeLists.txt  Doxyfile  bulk_client.cpp  bulk_server.cpp  main.cpp
src/: BulkImpl.h  Bulkmlt.h  Bulkmt.h  IInterpreterState.h  InfinitSequence.cpp  InfinitSequence.h  Sequence.cpp  Sequence.h  async.cpp  async.h
src/client/: Message.cpp
src/events/: EventDispatcher.h
src/log/: ConsoleLogger.h  FileLogger.h
src/remote/: Message.cpp
src/utils/: utils.cpp  utils.h
tests/: test_version.cpp
